Protótipo da Tela de Pendências

--- a/Protótipo de telas/boletim.html
+++ b/Protótipo de telas/boletim.html
@@ -15,7 +15,7 @@
 		</li>
 	<li class="nav-item"><a href="Boletim.html">Boletim</a></li>
 	<li class="nav-item"><a href="historico.html">Histórico</a></li>
-	<li class="nav-item"><a href="#">Pendências</a></li>
+	<li class="nav-item"><a href="pendencias.html">Pendências</a></li>
 	<li class="nav-item"><a href="#">Atividades Complementares</a></li>
 </ul>
 
@@ -23,6 +23,7 @@
 <label for="nav-trigger"></label>
 
 	<div class="site-wrap">
+	<h1 class="titulo-pagina">Boletim</h1>
 		<table>
 		  <thead>
 		    <tr>
