--- a/Protótipo de telas/pendencias.html
+++ b/Protótipo de telas/pendencias.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Histórico</title>
+	<title>Pendências</title>
 	<link rel="stylesheet" type="text/css" href="css/tabela.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
 </head>
 <body>
+
 	<ul class="navigation">
 	<li class="nav-item">
 		<img class="img-circle" src="img/alunoTeste.png">
@@ -23,46 +24,32 @@
 <label for="nav-trigger"></label>
 	
 	<div class="site-wrap">
-		<h1 class="titulo-pagina">Histórico</h1>
-		<h2 class="cr">CR: 8.5</h2>
+
+		<h1 class="titulo-pagina">Pendências</h1>
 		<ul class="accordion css-accordion">
 		  <li class="accordion-item">
 		    <input class="accordion-item-input" type="checkbox" name="accordion" id="item1" />
-		    <label for="item1" class="accordion-item-hd">2016.2<span class="accordion-item-hd-cta">&#9650;</span></label>
+		    <label for="item1" class="accordion-item-hd">1º Período<span class="accordion-item-hd-cta">&#9650;</span></label>
 		    <div class="accordion-item-bd">
 		    <table>
 		  		<thead>
 				    <tr>
 				      <th>Disciplina</th>
-				      <th>Nota</th>
-				      <th>Situação</th>
+				      <th>Carga Horária</th>
 				    </tr>
 			  	</thead>
 				<tbody>
 		  			<tr>
-		      			<td data-label="Disciplina">AL1</td>
-		      			<td data-label="Nota">6.0</td>
-		      			<td data-label="Situação">Aprovado</td>
-		      		</tr>
-		      		<tr>
-		      			<td data-label="Disciplina">AC1</td>
-		      			<td data-label="Nota">3.0</td>
-		      			<td data-label="Situação">Reprovado por Nota</td>
-		      		</tr>
-		      		<tr>
-		      			<td data-label="Disciplina">ALG</td>
-		      			<td data-label="Nota">7.0</td>
-		      			<td data-label="Situação">Reprovado por Falta</td>
+		      			<td data-label="Disciplina"><a href="#" data-tooltip="Algoritmo e Linguagem de Programação 1">AL1</a></td>
+		      			<td data-label="Carga Horária">120 Hrs</td>
 		      		</tr>
 		      		<tr>
 		      			<td data-label="Disciplina">RD1</td>
-		      			<td data-label="Nota">8.0</td>
-		      			<td data-label="Situação">Aprovado</td>
+		      			<td data-label="Carga Horária">80 Hrs</td>
 		      		</tr>
 		      		<tr>
-		      			<td data-label="Disciplina">MAT</td>
-		      			<td data-label="Nota">9.0</td>
-		      			<td data-label="Situação">Aprovado</td>
+		      			<td data-label="Disciplina">ALG</td>
+		      			<td data-label="Carga Horária">100 Hrs</td>
 		      		</tr>
 		      	</tbody>
 		    </table>
@@ -71,12 +58,22 @@
 		  </li>
 		  <li class="accordion-item">
 		    <input class="accordion-item-input" type="checkbox" name="accordion" id="item2" />
-		    <label for="item2" class="accordion-item-hd">2016.1<span class="accordion-item-hd-cta">&#9650;</span></label>
+		    <label for="item2" class="accordion-item-hd">2º Período<span class="accordion-item-hd-cta">&#9650;</span></label>
 		    <div class="accordion-item-bd"></div>
 		  </li>
 		  <li class="accordion-item">
 		    <input class="accordion-item-input" type="checkbox" name="accordion" id="item3" />
-		    <label for="item3" class="accordion-item-hd">2015.2<span class="accordion-item-hd-cta">&#9650;</span></label>
+		    <label for="item3" class="accordion-item-hd">3º Período<span class="accordion-item-hd-cta">&#9650;</span></label>
+		    <div class="accordion-item-bd"></div>
+		  </li>
+		  <li class="accordion-item">
+		    <input class="accordion-item-input" type="checkbox" name="accordion" id="item2" />
+		    <label for="item2" class="accordion-item-hd">4º Período<span class="accordion-item-hd-cta">&#9650;</span></label>
+		    <div class="accordion-item-bd"></div>
+		  </li>
+		  <li class="accordion-item">
+		    <input class="accordion-item-input" type="checkbox" name="accordion" id="item2" />
+		    <label for="item2" class="accordion-item-hd">5º Período<span class="accordion-item-hd-cta">&#9650;</span></label>
 		    <div class="accordion-item-bd"></div>
 		  </li>
 		</ul>
