apaga arquivos duplicados

--- a/Protótipos/Protótipo de telas/boletim.html
+++ b/Protótipos/Protótipo de telas/boletim.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Boletim</title>
+	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="css/tabela.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
 
