modal com detalhamento de faltas usando bootstrap

--- a/prototipos/boletim.html
+++ b/prototipos/boletim.html
@@ -3,9 +3,14 @@
 <head>
 	<title>Boletim</title>
 	<meta charset="utf-8"/>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/tabela.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
+	
 </head>
 <body>
 	<ul class="navigation">
@@ -15,6 +20,7 @@
 		<span class="span-info-usuario">Análise e Desenvolvimento de Sistemas</span>
 		</li>
 	<li class="nav-item"><a href="Boletim.html">Boletim</a></li>
+	<li class="nav-item"><a href="grade.html">Minha Grade</a></li>
 	<li class="nav-item"><a href="historico.html">Histórico</a></li>
 	<li class="nav-item"><a href="pendencias.html">Pendências</a></li>
 	<li class="nav-item"><a href="#">Atividades Complementares</a></li>
@@ -47,7 +53,7 @@
 		      <td data-label="AVF">6.0</td>
 		      <td data-label="Média Final">8.0</td>
 		      <td data-label="Professor">Leonardo</td>
-		      <td data-label="Faltas">10/30</td>
+		      <td data-label="Faltas">10/30<input type="image" src="img/information-circular-button.png" data-toggle="modal" data-target="#myModal"></td>
 		    </tr>
 		    <tr>
 		      <td data-label="Disciplina">ALG</td>
@@ -57,7 +63,7 @@
 		      <td data-label="AVF">6.0</td>
 		      <td data-label="Média Final">8.0</td>
 		      <td data-label="Professor">Bispo</td>
-		      <td data-label="Faltas">10/30</td>
+		      <td data-label="Faltas">10/30<input type="image" src="img/information-circular-button.png" data-toggle="modal" data-target="#myModal"></td>
 		    </tr>
 		    <tr>
 		      <td data-label="Disciplina">RD1</td>
@@ -67,7 +73,7 @@
 		      <td data-label="AVF">6.0</td>
 		      <td data-label="Média Final">8.0</td>
 		      <td data-label="Professor">M. Cláudia</td>
-		      <td data-label="Faltas">10/30</td>
+		      <td data-label="Faltas">10/30<input type="image" src="img/information-circular-button.png" data-toggle="modal" data-target="#myModal"></td>
 		    </tr>
 		    <tr>
 		      <td data-label="Disciplina">AC1</td>
@@ -77,10 +83,53 @@
 		      <td data-label="AVF">6.0</td>
 		      <td data-label="Média Final">8.0</td>
 		      <td data-label="Professor">Massillon</td>
-		      <td data-label="Faltas">10/30</td>
+		      <td data-label="Faltas">10/30<input type="image" src="img/information-circular-button.png" data-toggle="modal" data-target="#myModal"></td>
 		    </tr>
 		   </tbody>
 		</table>
+		
 	</div>
+	<!-- Modal -->
+		<div id="myModal" class="modal fade" role="dialog">
+		  <div class="modal-dialog">
+
+				<!-- Modal content-->
+				<div class="modal-content">
+				  <div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Detalhamento de faltas</h4>
+				  </div>
+				  <div class="modal-body">
+					<table>
+						<thead>
+							<tr>
+							  <th>Data</th>
+							  <th>Quantidade</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>03/04/17</td>
+								<td>3</td>
+							</tr>
+							<tr>
+								<td>15/05/17</td>
+								<td>6</td>
+							</tr>
+							<tr>
+								<td>17/05/17</td>
+								<td>3</td>
+							</tr>
+
+						</tbody>
+					</table>
+				  </div>
+				  <div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
+				  </div>
+				</div>
+
+		  </div>
+		</div>
 </body>
 </html>
