--- a/prototipos/historico.html
+++ b/prototipos/historico.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<title>Histórico</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/tabela.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
-
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<ul class="navigation">
@@ -14,6 +17,7 @@
 		<span class="span-info-usuario">Análise e Desenvolvimento de Sistemas</span>
 		</li>
 	<li class="nav-item"><a href="Boletim.html">Boletim</a></li>
+	<li class="nav-item"><a href="grade.html">Minha Grade</a></li>
 	<li class="nav-item"><a href="historico.html">Histórico</a></li>
 	<li class="nav-item"><a href="pendencias.html">Pendências</a></li>
 	<li class="nav-item"><a href="#">Atividades Complementares</a></li>
