--- a/prototipos/pendencias.html
+++ b/prototipos/pendencias.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>Pendências</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/tabela.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -15,6 +19,7 @@
 		<span class="span-info-usuario">Análise e Desenvolvimento de Sistemas</span>
 		</li>
 	<li class="nav-item"><a href="Boletim.html">Boletim</a></li>
+	<li class="nav-item"><a href="grade.html">Minha Grade</a></li>
 	<li class="nav-item"><a href="historico.html">Histórico</a></li>
 	<li class="nav-item"><a href="pendencias.html">Pendências</a></li>
 	<li class="nav-item"><a href="#">Atividades Complementares</a></li>
@@ -44,11 +49,11 @@
 		      			<td data-label="Carga Horária">120 Hrs</td>
 		      		</tr>
 		      		<tr>
-		      			<td data-label="Disciplina">RD1</td>
+		      			<td data-label="Disciplina"><span data-tooltip="Redes 1">RD1</td>
 		      			<td data-label="Carga Horária">80 Hrs</td>
 		      		</tr>
 		      		<tr>
-		      			<td data-label="Disciplina">ALG</td>
+		      			<td data-label="Disciplina"><span data-tooltip="Algebra linear">ALG</td>
 		      			<td data-label="Carga Horária">100 Hrs</td>
 		      		</tr>
 		      	</tbody>
