Exibição do boletim com JSON

--- a/prototipos/sidebar.html
+++ b/prototipos/sidebar.html
@@ -9,7 +9,6 @@
 	<li class="nav-item"><a href="grade.php">Minha Grade</a></li>
 	<li class="nav-item"><a href="historico.php">Histórico</a></li>
 	<li class="nav-item"><a href="pendencias.php">Pendências</a></li>
-	<li class="nav-item"><a href="#">Atividades Complementares</a></li>
 </ul>
 
 <input type="checkbox" id="nav-trigger" class="nav-trigger" />
@@ -20,13 +19,13 @@
 			var xmlhttp = new XMLHttpRequest();
 			xmlhttp.onreadystatechange = function() {
 				if (this.readyState == 4 && this.status == 200) {
-					myObj = JSON.parse(this.responseText);
-					document.getElementById("nomeUsuario").innerHTML = myObj.nome;
-					document.getElementById("curso").innerHTML = myObj.curso;
-					document.getElementById("matricula").innerHTML = myObj.matricula;
+					dadosUsuario = JSON.parse(this.responseText);
+					document.getElementById("nomeUsuario").innerHTML = dadosUsuario.nome;
+					document.getElementById("curso").innerHTML = dadosUsuario.curso;
+					document.getElementById("matricula").innerHTML = dadosUsuario.matricula;
 				}
 			};
-			xmlhttp.open("GET", "autenticacao.php", true);
+			xmlhttp.open("GET", "endpoint_side_bar.php", true);
 			xmlhttp.send();
 		</script>
 		
