Implementação de sessões e tabelas dinâmicas

--- a/fonte/coruja/meu_coruja/sidebar.html
+++ b/fonte/coruja/meu_coruja/sidebar.html
@@ -1,11 +1,13 @@
-	<ul class="navigation">
+	
+
+        <ul class="navigation">
 	<li class="nav-item">
 		<img class="img-circle" src="img/alunoTeste.png">
 		<span class="span-info-usuario" id="nomeUsuario"></span>
 		<span class="span-info-usuario" id="curso" ></span>
 		<span class="span-info-usuario" id="matricula"></span>
 		</li>
-	<li class="nav-item"><a href="index.php">Boletim</a></li>
+	<li class="nav-item"><a href="boletim.php">Boletim</a></li>
 	<li class="nav-item"><a href="grade.php">Minha Grade</a></li>
 	<li class="nav-item"><a href="historico.php">Histórico</a></li>
 	<li class="nav-item"><a href="pendencias.php">Pendências</a></li>
