--- a/fonte/coruja/meu_coruja/sidebar.html
+++ b/fonte/coruja/meu_coruja/sidebar.html
@@ -11,6 +11,7 @@
 	<li class="nav-item"><a href="grade.php">Minha Grade</a></li>
 	<li class="nav-item"><a href="historico.php">Histórico</a></li>
 	<li class="nav-item"><a href="pendencias.php">Pendências</a></li>
+        <li class="nav-item"><a href="sair.php">Sair</a></li>
 </ul>
 
 <input type="checkbox" id="nav-trigger" class="nav-trigger" />
