Barra de navegação sempre aberta no desktop e página atual em destaque

--- a/fonte/coruja/meu_coruja/grade.html
+++ b/fonte/coruja/meu_coruja/grade.html
@@ -53,7 +53,7 @@
         </script>
 
 </head>
-<body>
+<body class="link2">
 	<div class="site-wrap">
 		<h1 class="titulo-pagina">Grade Horária</h1>
 		<ul class="accordion css-accordion">
