Dados estáticos para entrevista de Usabilidade

--- a/fonte/coruja/meu_coruja/index.html
+++ b/fonte/coruja/meu_coruja/index.html
@@ -37,7 +37,7 @@
                 // Store
                 //localStorage.setItem("lastname", "Smith");
                 // Retrieve
-                document.getElementById("result").innerHTML = localStorage.getItem("nomeUsuario");
+                //document.getElementById("result").innerHTML = localStorage.getItem("nomeUsuario");
             } else {
                 document.getElementById("result").innerHTML = "Sorry, your browser does not support Web Storage...";
             }
