Alteração no nome dos objetos no localStorage

--- a/fonte/coruja/meu_coruja/sidebar.html
+++ b/fonte/coruja/meu_coruja/sidebar.html
@@ -14,7 +14,7 @@
                         Usuario.nome = dadosUsuario.nome;
                         Usuario.curso = dadosUsuario.curso;
                         Usuario.matricula = dadosUsuario.matricula;
-                        localStorage.setItem("Usuario", JSON.stringify(Usuario));
+                        localStorage.setItem("meuCoruja.Usuario", JSON.stringify(Usuario));
                     }, error: function (jqXHR) {
                         console.log(jqXHR.status);
                         if (jqXHR.status === 401) {
