--- a/fonte/coruja/meu_coruja/sidebar.html
+++ b/fonte/coruja/meu_coruja/sidebar.html
@@ -59,7 +59,7 @@
             <li class="nav-item" id="link1"><a href="boletim.html">Boletim</a></li>
             <li class="nav-item" id="link2"><a href="grade.html">Minha Grade</a></li>
             <li class="nav-item"><a href="historico.html">Histórico</a></li>
-            <li class="nav-item"><a class="current" href="pendencias.php">Pendências</a></li>
+            <li class="nav-item"><a class="current" href="pendencias.html">Pendências</a></li>
             <li class="nav-item"><a href="sair.php">Sair</a></li>
         </ul>
 
